# semilocal

./: CMakeLists.txt  README.md
source/cpu/: AB583265.1.fasta  CMakeLists.txt  README.md  braid_mul_testing_system.py  combing_testing_system.py  fasta_parser.h  fig4.py  fig5.py  fig67.py  fig8.py  fig9.py  find_depth_optimal.py  instructions  library.cpp  library.h  library_correctnesses_tests.h  main.cpp  naive_prefix_lcs.h  parsers.h  predefined_types.h  prefix_lcs.h  real_data_combing_test.py  rec_testing_combing.py  script.bash  semi_local.cpp  semi_local.h  sequence_generators.h  single_real.py  single_threaded_test.py  test_utils.h  testing_system.py  transposition_network.h  utils.h
source/cpu/Datasets/clean_real_dataset/: 124884.fna  134226.fna  13517.fna  16945.fna  201609.fna  306862.fna  33356.fna  39245.fna  43548.fna  50884.fna  57623.fna  59815.fna  74437.fna  7742.fna  91721.fna  9663.fna
source/cpu/Datasets/synthethic_dataset/: 1_100000_exp0_disp_1.fna  1_100000_exp0_disp_26.fna  1_100000_exp0_disp_5.fna  1_100000_exp500_disp_1.fna  1_100000_exp500_disp_26.fna  1_100000_exp500_disp_5.fna  1_10000_exp0_disp_1.fna  1_10000_exp0_disp_26.fna  1_10000_exp0_disp_5.fna  1_10000_exp500_disp_1.fna  1_10000_exp500_disp_26.fna  1_10000_exp500_disp_5.fna  1_1000_exp0_disp_1.fna  1_1000_exp0_disp_26.fna  1_1000_exp0_disp_5.fna  1_1000_exp500_disp_1.fna  1_1000_exp500_disp_26.fna  1_1000_exp500_disp_5.fna  1_200000_exp0_disp_1.fna  1_200000_exp0_disp_26.fna  1_200000_exp0_disp_5.fna  1_200000_exp500_disp_1.fna  1_200000_exp500_disp_26.fna  1_200000_exp500_disp_5.fna  1_20000_exp0_disp_1.fna  1_20000_exp0_disp_26.fna  1_20000_exp0_disp_5.fna  1_20000_exp500_disp_1.fna  1_20000_exp500_disp_26.fna  1_20000_exp500_disp_5.fna  1_2000_exp0_disp_1.fna  1_2000_exp0_disp_26.fna  1_2000_exp0_disp_5.fna  1_2000_exp500_disp_1.fna  1_2000_exp500_disp_26.fna  1_2000_exp500_disp_5.fna  1_500000_exp0_disp_1.fna  1_500000_exp0_disp_26.fna  1_500000_exp0_disp_5.fna  1_500000_exp500_disp_1.fna  (+68 more)
source/cpu/Datasets/synthethic_dataset/1/: 1_100000_exp0_disp_1.fna  1_10000_exp0_disp_1.fna  1_1000_exp0_disp_1.fna  1_12000_exp0_disp_1.fna  1_14000_exp0_disp_1.fna  1_16000_exp0_disp_1.fna  1_18000_exp0_disp_1.fna  1_200000_exp0_disp_1.fna  1_20000_exp0_disp_1.fna  1_2000_exp0_disp_1.fna  1_25000_exp0_disp_1.fna  1_30000_exp0_disp_1.fna  1_35000_exp0_disp_1.fna  1_40000_exp0_disp_1.fna  1_4000_exp0_disp_1.fna  1_45000_exp0_disp_1.fna  1_50000_exp0_disp_1.fna  1_5000_exp0_disp_1.fna  1_55000_exp0_disp_1.fna  1_60000_exp0_disp_1.fna  1_6000_exp0_disp_1.fna  1_65000_exp0_disp_1.fna  1_70000_exp0_disp_1.fna  1_75000_exp0_disp_1.fna  1_80000_exp0_disp_1.fna  1_8000_exp0_disp_1.fna  1_85000_exp0_disp_1.fna  1_90000_exp0_disp_1.fna  1_95000_exp0_disp_1.fna  2_100000_exp0_disp_1.fna  2_10000_exp0_disp_1.fna  2_1000_exp0_disp_1.fna  (+26 more)
source/cpu/Google_tests/: CMakeLists.txt  library_correctnesses_tests.cpp  semilocal_kernel.cpp  tests.cpp
source/cpu/approximate_matching/: ApproximateMatching.h  CompleteAMatch.h  ScoringScheme.h  ThresholdAMatch.h  WindowAMatch.h  utils.h
source/cpu/approximate_matching/interalTree/: interval_tree.h
source/cpu/binary_impls/: prefix_lcs_via_braid_bits_4symbol_int.cpp  prefix_lcs_via_braid_bits_4symbol_long_long.cpp  prefix_lcs_via_braid_bits_4symbol_mpi_int.cpp  prefix_lcs_via_braid_bits_4symbol_mpi_long_long.cpp  prefix_lcs_via_braid_bits_binary_int.cpp  prefix_lcs_via_braid_bits_binary_long_long.cpp  prefix_lcs_via_braid_bits_binary_mpi_int.cpp  prefix_lcs_via_braid_bits_binary_mpi_long_long.cpp
source/cpu/cpu_impl/: braid_multiplication_parallel.cpp  braid_multiplication_sequential_memory.cpp  braid_multiplication_sequential_non_optimized.cpp  braid_multiplication_sequential_precompute.cpp  braid_multiplication_sequntial_non_optimized.cpp  prefix_lcs.cpp  prefix_lcs_semi_bit_parallel_1form.cpp  prefix_lcs_semi_bit_parallel_2form.cpp  prefix_lcs_semi_bit_parallel_old.cpp  prefix_lcs_skewed.cpp  prefix_lcs_via_braid_bits_4symbol_long_long.cpp  prefix_lcs_via_braid_bits_4symbol_mpi_int.cpp  prefix_lcs_via_braid_bits_4symbol_mpi_long_long.cpp  prefix_lcs_via_braid_bits_binary_int.cpp  prefix_lcs_via_braid_bits_binary_long_long.cpp  prefix_lcs_via_braid_bits_binary_mpi_long_long.cpp  prefix_lcs_via_braid_sequential.cpp  semi_local_hybrid_iterative.cpp  semi_local_lcs_mpi.cpp  semi_local_lcs_sequential.cpp  semi_local_naive_iterative.cpp  semi_local_naive_rec.cpp  semi_local_paralell_1and3_combined_iterative.cpp  semi_local_parallel_1and3_combined_iterative.cpp  semi_local_parallel_hybrid.cpp  semi_local_parallel_inversea_iterative.cpp  semi_local_parallel_iterative.cpp  semi_local_parallel_withif_iterative.cpp  semi_local_parallel_withoutif_iterative.cpp
source/cpu/include/BitwiseLCS/: BitParalellLCS.h
source/cpu/include/LCS/: LCS.h
source/cpu/include/SemiLocal/: SemiLocalLCS.h
source/cpu/include/semiLocal/: SemiLocalLCS.h
source/cpu/prefix_lcs/bitwise/: 2symbol_new.h  2symbol_new_2.h  4symbol_new.h  encoders_and_decoders.h  transposition_network_4symbol_alphabet_bit.h  transposition_network_binary_alphabet.h  transposition_network_unbounded_alphabet.h
source/cpu/test/LCS/: LCSTest.cpp
source/cpu/test/MongeMatrixMultiplication/: SteadyAntTest.cpp
source/cpu/test/SemiLocalLCS/: SemiLocalLCSTest.cpp
source/cpu/transposition_network_approach/: 2symbol_new.h  4symbol_new.h  encoders_and_decoders.h  tmp.h  transposition_network_4symbol_alphabet.h  transposition_network_4symbol_alphabet_bit.h  transposition_network_4symbol_alphabet_bit_mpi.h  transposition_network_binary_alphabet.h  transposition_network_unbounded_alphabet.h
source/cpu/unit_monge_mult/: blownup.h  dominance_sum_queries.h  matrices.h  permutations_encoding.h  smawk.h  steady_ant.h
source/cpu/utils/: compile.py  logger.py  results.py  runners.py  testing.py  tests.py
source/gpu/: CMakeLists.txt  ___CMakeLists.___  kawanami.cuh  main.cu  memory_management.h  runner.cu
source/gpu/first_iteration/: semi_local.cu  transposition_network_4symbol_gpu.cu
source/gpu/semi_local/: algorithms.cuh
(+198 files in other folders)
